--- a/src/content/thoughts/interstitial-journalling.mdx
+++ b/src/content/thoughts/interstitial-journalling.mdx
@@ -23,30 +23,32 @@ Tony sells Interstitial Journalling as a "new journalling tactic that immediatel
 
 So what's the deal?
 
-The concept behind Interstitial Journalling is that between each task, you take a little time to pause and reflect on what's just happened and what you are about to do.  Rather than a lengthy braindump, it's a micro-journal of events throughout the day.
+The concept behind Interstitial Journalling is that between each task, you take a little time to pause and reflect on what's just happened and what you are about to do. Rather than a lengthy braindump, it's a micro-journal of events throughout the day.
 
 When we transition between projects or tasks, we continue to think about what we've just been working on. By writing down some salient points about what's just happened, we can gain some closure which helps us concentrate on the next task.
 
 As well as emptying our minds of the last project, this also gives us the mental space to think strategically about our next project.
 
 So, here's the process:
+
 - Journal about what you just did — it should only be a few sentences,
 - Plan your next task as a mini to-do list.
 - When thoughts or ideas pop into your head, note them down in your journal and tag them so you can easily return later, and then carry on with the task in hand.
-- Note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for.
+- Note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for. (This way you can overcome any [procrastination](/thoughts/procrastination) tendency)
 
 You can also start your day with a check-in, asking yourself how you feel, what are your fears for the day and what you are looking forward to. Bullet-point the answers.
 
 I've found journalling as I work, produces mindfulness about the context, my goals, mood, and skills. I've been using [Obsidian](https://obsidian.md) to write this journal. Obsidian allows you to add tags, which create automatic links to your notes on that subject, and templates, so you can add in custom checklists.
 
 Each time I start a new section of work, I fire up my "next task" checklist which reminds me to:
+
 - turn off notifications,
 - hide any windows that may cause distraction,
 - play some focus music/sounds,
 - set a pomodoro timer, and
 - execute (bullet point next steps).
 
-For me, this was a natural iteration and evolution of my note-taking and it's taken it to the next level. The ability to tag the notes, means I can interconnect my notes and allows me to remember a lot more.  With hoping in and out of meetings, it's not always possible to write my interstitial journal consistently but I've already seen a benefit to my output of work.
+For me, this was a natural iteration and evolution of my note-taking and it's taken it to the next level. The ability to tag the notes, means I can interconnect my notes and allows me to remember a lot more. With hoping in and out of meetings, it's not always possible to write my interstitial journal consistently but I've already seen a benefit to my output of work.
 
 And when I do come to review my week — it's a lot easier to read through the daily notes and see where I might have room for improvement.
 
