writing about decision logs and mental models

--- a/src/content/experiments/interstitial-journalling.mdx
+++ b/src/content/experiments/interstitial-journalling.mdx
@@ -11,6 +11,6 @@ I believe that using interstitial journalling will help me have more creative in
 
 I know this will have worked if:
 
-- I am not lost by distractions (like ideas popping into my head),
-- I identify common procrastination triggers and develop new responses to those cues,
+- I am not lost by distractions (like ideas popping into my head) or [procrastinating](/thoughts/procrastination.html). I notice triggers and develop new responses to those cues,
+- I use a [decision log](/thoughts/making-your-mind-up.html) help me think through problems,
 - weekly reviews are easier to write.
