--- a/src/content/thoughts/how-to-write-a-hypothesis.mdx
+++ b/src/content/thoughts/how-to-write-a-hypothesis.mdx
@@ -4,6 +4,7 @@ description: Fill in the gaps to create a testable hypothesis
 stage: note
 lastEdited: 18.06.2023
 theme: innovation
+draft: true
 ---
 
 import ReadMore from "@components/ReadMore.astro";
