fix broken link

--- a/src/content/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/content/thoughts/taking-notes-to-the-next-level.mdx
@@ -20,7 +20,7 @@ Our brains love creating connections, finding patterns and having those lightbul
 
 ## Taking notes on new observations
 
-When I read something thought provoking or hear something interesting, I now stop and <a href="./making-the-most-of-observations">make the most of this observation</a> by taking notes.
+When I read something thought provoking or hear something interesting, I now stop and make the most of this observation by taking notes.
 
 By making a conscious decision to act on new information, I prevent myself being sucked into the infinite scroll and turn insight into action.
 
