--- a/src/content/experiments/animating-svgs.mdx
+++ b/src/content/experiments/animating-svgs.mdx
@@ -2,7 +2,7 @@
 title: Animating SVGs
 description: How SVGs work and how to animate them
 lastEdited: 06.08.2023
-type: code
+type: experiment
 ---
 
 import { Prism } from "@astrojs/prism";
