adding tags and tag pages

--- a/src/content/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
+++ b/src/content/thoughts/be-the-change-you-wish-to-see-in-yourself.mdx
@@ -3,7 +3,7 @@ title: Be the change you wish to see in yourself
 description: How to set goals and achieve them
 stage: essay
 lastEdited: 09.09.2022
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -20,4 +20,4 @@ No. You are a runner. Runners don't hit snooze.
 
 Think about who you want to be and what behaviours you need to model.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.tag} title={frontmatter.title} />
