--- a/src/content/thoughts/developing-charisma.mdx
+++ b/src/content/thoughts/developing-charisma.mdx
@@ -3,7 +3,7 @@ title: Developing Charisma
 description: A list of tactics you can practice to develop charisma
 stage: note
 lastEdited: 07.08.2023
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -38,4 +38,4 @@ By using these techniques you can tap into the hopes and ideals of your listener
 
 (Antoine de Saint-Exupery)
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
