--- a/src/content/thoughts/dopamine.mdx
+++ b/src/content/thoughts/dopamine.mdx
@@ -3,7 +3,7 @@ title: Dopamine — this changes everything
 description: How dopamine rules your life and what you need to do to change
 stage: essay
 lastEdited: 16.04.2023
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -72,4 +72,4 @@ Another example of this, also mentioned on the podcast, is Intermittent Fasting.
 
 So leave your phone alone and enjoy grafting and honing your craft.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
