--- a/src/content/thoughts/engage-readers-with-hooks-promises-and-payoffs.mdx
+++ b/src/content/thoughts/engage-readers-with-hooks-promises-and-payoffs.mdx
@@ -3,7 +3,7 @@ title: Engage readers with hooks, promises and payoffs.
 description: Turning insight into an engaging read.
 stage: essay
 lastEdited: 7.08.2023
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -69,4 +69,4 @@ To set up this payoff with a promise, I literally posed a couple of questions an
 
 That’s the theory anyway. I’d be really interested in whether you feel this essay has hit the mark and what you might improve. What other techniques could improve my writing and have the impact I’m searching for?
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
