--- a/src/content/thoughts/how-to-write-articles.mdx
+++ b/src/content/thoughts/how-to-write-articles.mdx
@@ -3,7 +3,7 @@ title: How to write articles
 description: A process for writing more structured content
 stage: note
 lastEdited: 8.09.2022
-theme: writing
+tag: writing
 draft: true
 ---
 
@@ -37,4 +37,4 @@ String those 2–3 main points together with:
 - Write your key points in a conclusion
 - Whip up a few title options (which include your target keyword!)
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
