--- a/src/content/thoughts/interstitial-journalling.mdx
+++ b/src/content/thoughts/interstitial-journalling.mdx
@@ -3,7 +3,7 @@ title: Interstitial journalling
 description: Mindfully journalling throughout the day
 stage: essay
 lastEdited: 22.1.2023
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -52,4 +52,4 @@ For me, this was a natural iteration and evolution of my note-taking and it's ta
 
 And when I do come to review my week — it's a lot easier to read through the daily notes and see where I might have room for improvement.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
