--- a/src/content/thoughts/lean-and-mean-prototyping.mdx
+++ b/src/content/thoughts/lean-and-mean-prototyping.mdx
@@ -3,7 +3,7 @@ title: Lean and mean prototyping
 description: How and why I advocate lean ux and building to learn
 stage: note
 lastEdited: 16.09.2022
-theme: innovation
+tag: innovation
 draft: true
 ---
 
@@ -13,4 +13,4 @@ Creating a prototype is story.
 
 Code only the interactions needed to support the scenario.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
