--- a/src/content/thoughts/making-your-mind-up.mdx
+++ b/src/content/thoughts/making-your-mind-up.mdx
@@ -3,7 +3,7 @@ title: Making your mind up
 description: Making sound decisions using mental models
 stage: note
 lastEdited: 08.08.2023
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -41,4 +41,4 @@ Mental models are patterns your brain uses to figure stuff out — frameworks th
 
 There are too many mental models to list!
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
