--- a/src/content/thoughts/metacognition.mdx
+++ b/src/content/thoughts/metacognition.mdx
@@ -3,7 +3,7 @@ title: Metacognition, learning and me
 description: The science of thinking about thinking
 stage: essay
 lastEdited: 29.10.2022
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -127,4 +127,4 @@ After completing the task, ask:
 - How well did you perform?
 - How did the strategies work out?
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
