--- a/src/content/thoughts/procrastination.mdx
+++ b/src/content/thoughts/procrastination.mdx
@@ -3,7 +3,7 @@ title: A technique for overcoming procrastination
 description: And why we prioritise other things instead
 stage: essay
 lastEdited: 22.1.2023
-theme: self-management
+tag: self-management
 ---
 
 import ReadMore from "@components/ReadMore.astro";
@@ -50,4 +50,4 @@ Here's a process to get started:
 - concentrate on the next task (if the task is overwhelmingly large, break it up into smaller chunks - making progress gives you an emotional boost),
 - when the timer is up, take a break.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
