--- a/src/content/thoughts/taking-notes-to-the-next-level.mdx
+++ b/src/content/thoughts/taking-notes-to-the-next-level.mdx
@@ -3,7 +3,7 @@ title: Taking notes to the next level
 description: Using a digital garden for cultivating wisdom
 stage: reflection
 lastEdited: 08.09.2022
-theme: self-management
+tag: self-management
 ---
 
 import Acorn from "@drawings/Acorn.astro";
@@ -66,4 +66,4 @@ Publishing essays and asking for feedback cross-pollinates ideas. Articles can b
 
 Because ideas are reflected and iterated on, information is not only retained but new mental models are created and can be applied to future decisions. This wisdom is the bounty I hope to harvest.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
