--- a/src/content/thoughts/technical-discovery-canvas.mdx
+++ b/src/content/thoughts/technical-discovery-canvas.mdx
@@ -3,7 +3,7 @@ title: Technical Discovery Canvas
 description: A visual guide to a process for derisking investment in technology.
 stage: note
 lastEdited: 07.01.2023
-theme: innovation
+tag: innovation
 ---
 
 import Activities from "@drawings/Activities.astro"
