--- a/src/content/thoughts/how-to-write-a-hypothesis.mdx
+++ b/src/content/thoughts/how-to-write-a-hypothesis.mdx
@@ -3,7 +3,7 @@ title: How to write a hypothesis
 description: Fill in the gaps to create a testable hypothesis
 stage: note
 lastEdited: 18.06.2023
-theme: innovation
+tag: innovation
 draft: true
 ---
 
@@ -11,4 +11,4 @@ import ReadMore from "@components/ReadMore.astro";
 
 We believe we will achieve INTENDED OUTCOME, if THESE USERS, attain THIS BENEFIT, with THIS SOLUTION.
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
