--- a/src/content/thoughts/making-the-most-of-observations.mdx
+++ b/src/content/thoughts/making-the-most-of-observations.mdx
@@ -3,7 +3,7 @@ title: Making the most of observations
 description: Where to find inspiration for notes
 stage: note
 lastEdited: 31.08.2022
-theme: self-management
+tag: self-management
 draft: true
 ---
 
@@ -15,4 +15,4 @@ import ReadMore from "@components/ReadMore.astro";
 - What insight can you find in that observation?
 - <a href="./how-to-create-the-perfect-post">Turn insights into posts</a>
 
-<ReadMore theme={frontmatter.theme} title={frontmatter.title} />
+<ReadMore tag={frontmatter.theme} title={frontmatter.title} />
