--- a/src/content/thoughts/teamwork-makes-the-dream-work.mdx
+++ b/src/content/thoughts/teamwork-makes-the-dream-work.mdx
@@ -3,7 +3,7 @@ title: Teamwork makes the dream work
 description: Notes on high-performing teams
 stage: note
 lastEdited: 19.09.2022
-theme: innovation
+tag: innovation
 draft: true
 ---
 
