--- a/src/content/thoughts/engage-readers-with-hooks-promises-and-payoffs.mdx
+++ b/src/content/thoughts/engage-readers-with-hooks-promises-and-payoffs.mdx
@@ -1,6 +1,6 @@
 ---
-title: Engage readers with hooks, promises and payoffs.
-description: Turning insight into an engaging read.
+title: Engage readers with hooks, promises and payoffs
+description: Turning insight into an engaging read
 stage: essay
 lastEdited: 7.08.2023
 tag: self-management
