minor updates to posts

--- a/src/content/thoughts/engage-readers-with-hooks-promises-and-payoffs.mdx
+++ b/src/content/thoughts/engage-readers-with-hooks-promises-and-payoffs.mdx
@@ -44,7 +44,7 @@ By using a consise story to engage your audience and create intrigue, you’ve h
 
 The promise is something that tells your audience what’s to come so that they have something to look forward to. When you fulfil the promise, the audience is rewarded with a payoff.
 
-I guess this creates tension and resolution.
+This creates tension and resolution.
 
 Start your planning with the payoff. The payoff is your end goal, your big moment. Then work backward to create your promise and the rest of the story to build to that moment.
 
@@ -57,7 +57,7 @@ The payoff is the main take away from your article. Think about the effect you w
 - What’s the shift in thinking/transformation?
 - What’s the ask/question?
 
-In [my original blog post](https://www.cxpartners.co.uk/our-thinking/the-very-definition-of-a-creative-technologist) (that one that helped Josh), I wanted potential clients to understand what a Creative Technologist does.
+In [the blog post that inspired Josh](https://www.cxpartners.co.uk/our-thinking/the-very-definition-of-a-creative-technologist), I wanted potential clients to understand what a Creative Technologist does.
 
 I showcased the value that the role has, using personal anecdotes from real projects.
 
