--- a/src/content/thoughts/lean-and-mean-prototyping.mdx
+++ b/src/content/thoughts/lean-and-mean-prototyping.mdx
@@ -1,6 +1,6 @@
 ---
 title: Lean and mean prototyping
-description: How and why I advocate lean ux and building to learn
+description: How and why I advocate Lean UX and building to learn
 stage: note
 lastEdited: 16.09.2022
 tag: innovation
