--- a/src/content/thoughts/procrastination.mdx
+++ b/src/content/thoughts/procrastination.mdx
@@ -1,8 +1,8 @@
 ---
 title: A technique for overcoming procrastination
 description: And why we prioritise other things instead
-stage: essay
-lastEdited: 22.1.2023
+stage: reflection
+lastEdited: 14.2.2024
 tag: self-management
 ---
 
@@ -21,8 +21,8 @@ Procrastination is also a habit. And if you want to tackle procrastination, you 
 By changing your reaction to the cues that trigger your habit of procrastination, you can start working on the things that matter:
 
 - Recognise the cues:
-    - where are you when this happens?
-    - what time of day is it?,
+  - where are you when this happens?
+  - what time of day is it?
 - Develop new responses to those cues, change your environment, eliminate those distractions.
 - Reward the new behaviour — be consistent.
 
@@ -49,3 +49,7 @@ Here's a process to get started:
 - write out your next few steps as a mini to-do list,
 - concentrate on the next task (if the task is overwhelmingly large, break it up into smaller chunks - making progress gives you an emotional boost),
 - when the timer is up, take a break.
+
+Understanding why I procrastinate has had a really powerful effect on me. By noticing when I am putting things off, and realising that this is a defense mechanism at play, I now know that this is the time I need to get introspective and think about why I'm acting this way.
+
+More often enough, this happens when I don't know how to do something and I get frustrated. Now I know to lean into the frustration and take the time to work things out.
