--- a/src/content/thoughts/interstitial-journalling.mdx
+++ b/src/content/thoughts/interstitial-journalling.mdx
@@ -34,7 +34,7 @@ So, here's the process:
 - Journal about what you just did — it should only be a few sentences,
 - Plan your next task as a mini to-do list.
 - When thoughts or ideas pop into your head, note them down in your journal and tag them so you can easily return later, and then carry on with the task in hand.
-- Note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for. (This way you can overcome any [procrastination](/thoughts/procrastination) tendency)
+- Note down any time you notice yourself become distracted, take a note of the time, what you felt the trigger was, what you did and how long you were lost for. (This way you can overcome any tendency to [procrastinate](/thoughts/procrastination))
 
 You can also start your day with a check-in, asking yourself how you feel, what are your fears for the day and what you are looking forward to. Bullet-point the answers.
 
@@ -43,11 +43,11 @@ I've found journalling as I work, produces mindfulness about the context, my goa
 Each time I start a new section of work, I fire up my "next task" checklist which reminds me to:
 
 - turn off notifications,
-- hide any windows that may cause distraction,
-- play some focus music/sounds,
-- set a pomodoro timer, and
-- execute (bullet point next steps).
+- play some focus music/sounds, and
+- start a pomodoro timer.
 
-For me, this was a natural iteration and evolution of my note-taking and it's taken it to the next level. The ability to tag the notes, means I can interconnect my notes and allows me to remember a lot more. With hoping in and out of meetings, it's not always possible to write my interstitial journal consistently but I've already seen a benefit to my output of work.
+Then I bullet point next steps and start executing.
+
+For me, this was a natural iteration and evolution of my note-taking and it's taken it to the next level. The ability to tag, means I can interconnect my notes and allowing me to recall a lot more information. Hopping in and out of meetings, it's not always possible to write my interstitial journal consistently but I've already seen a benefit to my output of work.
 
 And when I do come to review my week — it's a lot easier to read through the daily notes and see where I might have room for improvement.
